tests/whiley/valid/test_539.wyal
type LinkedList is (null|{int data, LinkedList next} self)


assert "type invariant not satisfied":
    forall(LinkedList l, !null&LinkedList l$1):
        if:
            l$1 == l
            l is !null
        then:
            l$1.next is LinkedList


